# voice2vocaloid

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/TestApp/: CMakeLists.txt
src/Voice2Midi/: CMakeLists.txt
src/Voice2Phoneme/: CMakeLists.txt  CVCKeys.h  CVKeys.h  CVVCKeys.h
